[package]
name = "envdot"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
litrs = "0.2.3"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = "1.0.99"
