[package]
name = "envdot"
version = "0.1.0"
edition = "2018"
description = "A simple, lightweight procedural macro to read a .env file at build time, and link it's environment variables at runtime"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/envdot"
repository = "https://github.com/jewlexx/envdot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = "1.0.99"
